# Hyss

./: .gitignore  Pipfile  README.md  pyproject.toml
hyss/: __init__.py  format.py  std.py
spec/: test_animations.py  test_style_sheets.py
tests/: helpers.py  test_animations.py  test_formatters.py  test_style_sheets.py  test_sub_styles.py
tests/assets/: basic_sheet.css  indented_sheet.css  linebroken_sheet.css  sub_styles_sheet.css
