[build-system]
requires = ['setuptools>=61.0.0', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'hyss'
version = '1.0.0'
description = 'High impact style sheets, empowered by python'
readme = 'README.md'
authors = [{ name = 'Charlie Paterson', email = 'Charlieed.paterson@googlemail.com'}]
license = { file = 'LICENSE' }
classifiers = [
	'License :: OSI Approved :: MIT License',
	'Programming language :: Python :: 3',
]
keywords = ['css', 'hyss', 'styles', 'stylesheets', 'animations']

